# blogpost-fuzzer-101

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
corpus/: claude1  claude2  claude3  claude4  claude5  gethealth
json_diff/: Cargo.toml
json_diff/src/: main.rs
scratch/: test.rs
serde_standalone/: .gitignore  Cargo.toml  perf_it.sh
serde_standalone/src/: main.rs
src/: main.rs
