cargo-features = ["edition2024"]

[package]
name = "serde_standalone"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "serde_standalone"

[dependencies]
serde_json = "1.0"
libafl =  {version = "0.15.2", features = ["prelude"]}
libafl_targets =  {version = "0.15.2", features = [
     "sancov_pcguard_edges",
    # "sancov_pcguard_hitcounts"
    ]}
libafl_bolts = {version = "0.15.2", features = ["prelude"]}

[profile.release]
codegen-units = 1
lto = "fat"